--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     <header>
         <div class="header-container">
             <h1>WandelTracker</h1>
-            <nav id="main-nav" class="main-nav hidden">
-                <a href="/" data-route="/">Projecten</a>
-                <a href="/settings" data-route="/settings">Instellingen</a>
-            </nav>
+<nav id="main-nav" class="main-nav hidden">
+    <a href="/" data-route="/">Projecten</a>
+    <a href="/timeline" data-route="/timeline">Tijdlijn</a>
+    <a href="/settings" data-route="/settings">Instellingen</a>
+</nav>
             <div class="header-right">
                 <p id="user-info"></p>
                 <button id="logout-btn" class="secondary-btn hidden">Uitloggen</button>
